Update the layout to work with jekyll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>puppet-lint</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
+    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
+    <script src="/javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -30,8 +30,8 @@
 
         <ul class="menu">
           <li><a href="/">Home</a></li>
-          <li><a href="#">Checks</a></li>
-          <li><a href="#">Changelog</a></li>
+          <li><a href="/checks/">Checks</a></li>
+          <li><a href="/changelog/">Changelog</a></li>
           <li><a href="https://github.com/rodjek/puppet-lint/issues">Issues</a></li>
         </ul>
         <p class="header">This project is maintained by <a class="header name" href="https://github.com/rodjek">rodjek</a></p>
