Add new menu items

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,12 @@
           <li><a href="/checks/">Checks</a></li>
           <li><a href="/changelog/">Changelog</a></li>
           <li><a href="https://github.com/rodjek/puppet-lint/issues">Issues</a></li>
+          <li><a href="/developing/">Writing New Checks</a>
+            <ul class="menu">
+              <li><a href="#">API Reference</a></li>
+              <li><a href="#">Token Types</a></li>
+            </ul>
+          </li>
         </ul>
         <p class="header">This project is maintained by <a class="header name" href="https://github.com/rodjek">rodjek</a></p>
       </header>
