Update docs for 1.0.0

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,26 @@
             <a href="/checks/">Checks</a>
           </li>
           <li>
+            <a href="/controlcomments/">Control Comments</a>
+          </li>
+          <li>
+            <a href="#">Developer</a>
+            <ul>
+              <li>
+                <a href="/developer/tutorial/">Tutorial</a>
+              </li>
+              <li>
+                <a href="/developer/api/">API Reference</a>
+              </li>
+              <li>
+                <a href="/developer/tokens/">Token Reference</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="/plugins/">Community Plugins</a>
+          </li>
+          <li>
             <a href="/changelog/">Changelog</a>
           </li>
           <li>
