--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -125,3 +125,13 @@
 table th {
     width: 50%;
 }
+
+span.lineno {
+   -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
+   color: gray;
+   padding-right: 15px;
+}
