Point Changelog link to github
The one maintained in gh-pages is out of date, and it's hard to keep in sync automatically.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
             <a href="/plugins/">Community Plugins</a>
           </li>
           <li>
-            <a href="/changelog/">Changelog</a>
+            <a href="https://github.com/rodjek/puppet-lint/blob/master/CHANGELOG.md">Changelog</a>
           </li>
           <li>
             <a href="https://github.com/rodjek/puppet-lint/issues">Issues</a>
