--- a/docs/assets/css/doc-style.css
+++ b/docs/assets/css/doc-style.css
@@ -13,6 +13,22 @@ html, body {
   letter-spacing: 0.03rem;
 }
 
+.doc .promo-box .link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-image: url("../images/empty.gif");
+}
+
+.doc .page-title {
+  font-size: 2rem;
+  border-bottom: 2px solid #c1996b;
+  padding-bottom: 1rem;
+}
+
 /*--- spacers ---*/
 .spacer {
   margin: 15px 0;
@@ -616,6 +632,8 @@ body.doc {
   font-size: 1.5rem;
   border-bottom: 2px solid #c1996b;
   padding-bottom: 1rem;
+  margin-bottom: 1rem;
+  margin-top: 2rem;
 }
 
 .doc .promo-box {
