Finish off developer docs

--- a/docs/_includes/check_table.html
+++ b/docs/_includes/check_table.html
@@ -20,7 +20,7 @@
                 <td>No</td>
 {% endif %}
 {% if page.check.style_guide %}
-                <td><a href="https://docs.puppetlabs.com/guides/style_guide.html#{{ page.check.style_guide}}">Link</a></td>
+                <td><a href="https://docs.puppetlabs.com/guides/style_guide.html{{ page.check.style_guide}}">Link</a></td>
 {% else %}
                 <td></td>
 {% endif %}
