--- a/docs/_layouts/check.html
+++ b/docs/_layouts/check.html
@@ -46,10 +46,10 @@
                         <a class="nav-link active" href="/documentation/">Documentation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/faq/">FAQ</a>
+                        <a class="nav-link" href="/plugins/">Plugins</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/developer/">Developer</a>
+                        <a class="nav-link" href="/faq/">FAQ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/rodjek/puppet-lint/issues">Support</a>
@@ -75,7 +75,7 @@
 
     <footer>
         <div class="container">
-            <p>Last updated: {{ site.time | date_to_long_string }}<span class="pull-right"><a href="/documentation/">Documentation</a> <a href="/faq/">FAQ</a> <a href="/developer/">Developer</a> <a href="https://github.com/rodjek/puppet-lint/issues">Support</a></span></p>
+            <p>Last updated: {{ site.time | date_to_long_string }}<span class="pull-right"><a href="/documentation/">Documentation</a> <a href="/plugins/">Plugins</a> <a href="/faq/">FAQ</a> <a href="https://github.com/rodjek/puppet-lint/issues">Support</a></span></p>
         </div><!-- / container -->
     </footer>
 
